# anu-banayich

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  forum.py  moderator.py  professional.py  users.py
backend/app/core/: config.py  constants.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  audit.py  document.py  forum.py  professional.py  report.py  user.py
backend/app/schemas/: __init__.py  auth.py  forum.py  professional.py  report.py  user.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  email_service.py  forum_service.py  professional_service.py  report_service.py  user_service.py
backend/migrations/: env.py
backend/migrations/versions/: 91c4a53eec32_initial.py
backend/tests/: conftest.py  test_auth.py  test_email_service.py  test_health.py  test_migration.py
frontend/: angular.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.spec.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/constants/: index.ts
frontend/src/app/core/guards/: auth.guard.ts  role.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.spec.ts  auth.interceptor.ts
frontend/src/app/core/models/: index.ts
frontend/src/styles/: _mixins.scss  _variables.scss
(+47 files in other folders)
